--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,28 @@ body{
   font-family: 'Noto Sans KR', sans-serif;
 }
 
+#back{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 138px;
+  left: 180px;
+  z-index: 100;
+  display: none;
+}
+
+#back i{
+  display: inline-block;
+  vertical-align: middle;
+}
+
+i.arrow-white {
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg stroke-width='2' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18.5 12H6M6 12L12 6M6 12L12 18' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  width: 32px;
+  height: 32px;
+}
+
 #greeting{
   width: 40%;
   height: 100vh;
@@ -19,16 +41,9 @@ body{
   font-weight: 600;
   line-height: 60px;
 }
-#greeting .icons{
-  padding-top: 30px;
-}
-#greeting .icons svg{
-  float: left;
-}
-#greeting .icons .github{
-  width: 40px;
-  height: auto;
-}
+#greeting .icons{padding-top: 30px;}
+#greeting .icons svg{float: left;}
+#greeting .icons .github{width: 40px; height: auto;}
 #greeting .icons .mail{
   width: 38px;
   height: auto;
@@ -50,6 +65,7 @@ body{
   float: left;
   margin: 20px;
   position: relative;  
+  cursor: pointer;
 }
 
 #category .category__box:nth-child(1){
@@ -74,3 +90,254 @@ body{
   color: #fff;
   padding: 60px;
 }
+
+.category__bar{
+  width: 100%;
+  height: 65px;
+  border-radius: 26px;
+  float: left;
+  clear: both;
+  padding-left: 64px;
+}
+
+#about { display: none; padding: 120px 160px 0;}
+#about .about__box-bar{
+  background-image: linear-gradient( 109.6deg,  rgba(62,161,219,1) 11.2%, rgba(93,52,236,1) 100.2% );
+}
+
+#about .about__box-bar p{
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+  line-height: 64px;
+}
+
+#about .about__box{
+  width: 50%;
+  padding: 70px 26px;
+  float: left;
+}
+
+#about .about__box p{font-size: 18px; color: #fff;}
+#about .about__box .about__box-work{}
+#about .about__box h3{
+  font-size: 22px;
+  font-weight: 500;
+  color: #fff;
+  margin-bottom: 26px;
+}
+
+#about .about__box .about__box-work p{
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+  margin: 10px 0;
+}
+
+#about .about__box .about__box-skills{ margin: 120px 0;}
+#about .about__box .about__box-skills h4{
+  font-size: 22px;
+  font-weight: 500;
+  color: #fff;
+  margin: 40px 0 20px 0;
+}
+
+#about .about__box .about__box-skills ul{}
+#about .about__box .about__box-skills ul li{
+  float: left;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  padding: 8px 10px;
+  margin: 0 6px 6px 0;
+}
+#about .about__box .about__box-skills ul li svg{
+  width: 18px;
+  height: auto;
+  float: left;
+}
+#about .about__box .about__box-skills ul li p{
+  font-size: 15px;
+  font-weight: 200;
+  float: left;
+  line-height: 16px;
+  padding-left: 8px;
+}
+
+#about .about__box .about__box-skills .about__box-skills-tools{
+  clear: both;
+  margin-top: 100px;
+}
+
+#design {display: none; padding: 120px 160px 0;}
+#design .design-bar{
+  background-image: linear-gradient( -83.2deg,  rgba(150,93,233,1) 10.8%, rgba(99,88,238,1) 94.3% );
+}
+#design .design-bar p{
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+  line-height: 64px;
+}
+
+#design ul {
+  width: 100%;
+  height: auto;
+  padding-top: 100px;
+}
+
+#design ul li {
+  width: 33.3%;
+  padding: 12px;
+  margin-bottom: 10px;
+  float: left; 
+}
+#design ul li a {
+  display: block;
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  background-size: cover;
+}
+#design ul li h2 {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  margin: 16px 0 6px;
+}
+#design ul li p{
+  font-size: 14px;
+  font-weight: 100;
+  color: #fff;
+}
+
+#design ul li:nth-child(1) a {
+  background-image: url(../src/design/01.jpg);
+  background-position: center bottom;
+}
+#design ul li:nth-child(2) a {
+  background-image: url(../src/design/02.jpg);
+  background-position: center top;
+}
+#design ul li:nth-child(3) a {
+  background-image: url(../src/design/03.jpg);
+  background-position: center top;
+}
+#design ul li:nth-child(4) a {
+  background-image: url(../src/design/04.jpg);
+  background-position: center 3%;
+}
+#design ul li:nth-child(5) a {
+  background-image: url(../src/design/05.jpg);
+  background-position: center top;
+}
+#design ul li:nth-child(6) a {
+  background-image: url(../src/design/06.jpg);
+  background-position: center 20%;
+}
+
+#projects {display: none; padding: 120px 160px 0;}
+
+#projects .projects-bar{
+  background-image: linear-gradient( 83.2deg,  rgba(150,93,233,1) 10.8%, rgba(99,88,238,1) 94.3% );
+}
+#projects .projects-bar p{
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+  line-height: 64px;
+}
+#projects ul{
+  width: 100%;
+  height: auto; 
+  padding-top: 100px;
+}
+#projects ul li {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 10px;
+  float: left;
+}
+#projects ul li a {
+  display: block;
+  width: 45%;
+  height: 200px;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  background-size: cover;
+  float: left;
+}
+#projects ul li .info {
+  width: 55%;
+  height: auto;
+  float: left;
+  padding: 6px 50px;
+  color: #fff;
+}
+#projects ul li .info > h2 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 16px;
+}
+#projects ul li .info .info__box p {
+  font-size: 18px;
+  font-weight: 100;
+  line-height: 26px;
+}
+#projects ul li .info button {
+  margin-top: 36px;
+  padding: 12px 60px;
+  border-radius: 3px;
+  border: 1px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 100;
+  cursor: pointer;
+}
+#projects ul li .info button:hover {
+  border: 1px solid rgba(150,93,233,1);
+  background-color: rgba(150,93,233,1);
+}
+#projects ul li:nth-child(1) a {
+  background-image: url("../src/projects/leaders.png");
+  background-position: center 35%;
+}
+
+#contact{
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  text-align: center;
+  color: #fff;
+  display: none;
+}
+
+#contact .contact__image{
+  margin: 180px auto 0;
+  width: 320px;
+  height: 320px;
+  border-radius: 126px;
+  background-image: url(../src/contact/profile.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 66%;
+}
+
+#contact h3 {
+  font-size: 50px;
+  font-weight: 600;
+  margin-top: 60px;
+}
+
+#contact .contact__info{
+  margin: 30px 0;
+  font-size: 18px;
+  font-weight: 100;
+  line-height: 30px;
+}
+
+#contact .contact__info p.copyright{
+  margin: 20px 0;
+}
+
