반응형 (Media query) 추가

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -5,4 +5,8 @@ $lavender: #7386C2;
 $orange: #EEAF5E;
 $pink: #F39DC0;
 
-// Media Query
+// Breakpoints
+$breakpoint-mobile: 335px;
+$breakpoint-tablet: 758px;
+$breakpoint-desktop: 1024px;
+
