--- a/css/style.scss
+++ b/css/style.scss
@@ -79,18 +79,22 @@ body {
 
         &#blobSvg_about{
           display: block;
+          overflow: auto;
         }
 
         &#blobSvg_design{
           display: block;
+          overflow: auto;
         }
 
         &#blobSvg_projects{
           display: block;
+          overflow: auto;
         }
 
         &#blobSvg_contact{
           display: block;
+          overflow: auto;
         }
       }
 
