--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,8 @@ footer{
   padding: 20px 0;
 }
 
-footer.bottom{
+footer.bottom,
+footer.about{
   position: absolute;
   left: 0;
   top: 94%;
@@ -314,6 +315,7 @@ footer p{
   background-image: url("data:image/svg+xml;charset=utf8,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='a' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:%23fff;%7D.c%7Bfill:%2347beab;%7D%3C/style%3E%3C/defs%3E%3Cg%3E%3Cpath class='b' d='M26.05,69.96h7.66v1.61h-5.8v2.79h5.37v1.52h-5.37v3.12h5.9v1.61h-7.77v-10.65Z'/%3E%3Cpath class='b' d='M38.6,69.96h1.98l4.1,10.65h-2l-1-2.82h-4.25l-1,2.82h-1.92l4.09-10.65Zm-.66,6.41h3.25l-1.6-4.58h-.05l-1.61,4.58Z'/%3E%3Cpath class='b' d='M45.67,69.96h4.41c3.28,0,4.7,2.39,4.7,5.32s-1.42,5.32-4.7,5.32h-4.41v-10.65Zm1.86,9.12h1.83c2.92,0,3.55-1.67,3.55-3.8s-.63-3.8-3.55-3.8h-1.83v7.6Z'/%3E%3Cpath class='b' d='M56.39,69.96h7.66v1.61h-5.8v2.79h5.37v1.52h-5.37v3.12h5.9v1.61h-7.77v-10.65Z'/%3E%3Cpath class='b' d='M65.7,69.96h5.08c2.33,0,3.52,1.07,3.52,2.88,0,2.04-1.42,2.56-1.76,2.68v.03c.64,.09,1.58,.57,1.58,2.25,0,1.24,.18,2.37,.58,2.8h-2c-.28-.46-.28-1.04-.28-1.57,0-1.95-.4-2.82-2.12-2.82h-2.74v4.38h-1.86v-10.65Zm1.86,4.85h3.06c1.18,0,1.82-.58,1.82-1.7,0-1.36-.88-1.63-1.85-1.63h-3.03v3.32Z'/%3E%3Cpath class='b' d='M77.35,77.05c0,1.64,1.21,2.28,2.7,2.28,1.64,0,2.25-.8,2.25-1.61s-.45-1.15-.88-1.31c-.75-.28-1.71-.48-3.18-.88-1.82-.49-2.36-1.6-2.36-2.7,0-2.13,1.97-3.13,3.89-3.13,2.22,0,4.08,1.18,4.08,3.4h-1.86c-.09-1.37-1.01-1.88-2.3-1.88-.87,0-1.95,.31-1.95,1.39,0,.75,.51,1.16,1.27,1.37,.16,.04,2.52,.66,3.07,.82,1.4,.42,2.07,1.61,2.07,2.71,0,2.39-2.12,3.34-4.23,3.34-2.43,0-4.4-1.16-4.44-3.8h1.86Z'/%3E%3C/g%3E%3Cg%3E%3Cpath class='b' d='M42.87,89.6h6.79v.7h-2.99v7.87h-.82v-7.87h-2.99v-.7Z'/%3E%3Cpath class='b' d='M50.42,89.6h3.92c1.42,0,2.6,.68,2.6,2.23,0,1.08-.56,1.97-1.67,2.18v.02c1.12,.14,1.44,.91,1.5,1.93,.04,.59,.04,1.76,.4,2.2h-.9c-.2-.34-.2-.97-.23-1.33-.07-1.2-.17-2.53-1.72-2.47h-3.1v3.8h-.82v-8.57Zm.82,4.07h3.05c1,0,1.85-.62,1.85-1.67s-.62-1.7-1.85-1.7h-3.05v3.37Z'/%3E%3Cpath class='b' d='M61.15,89.6h.91l3.36,8.57h-.88l-1.04-2.66h-3.9l-1.03,2.66h-.88l3.46-8.57Zm-1.3,5.21h3.37l-1.66-4.39-1.72,4.39Z'/%3E%3Cpath class='b' d='M66.18,89.6h2.96c2.58,.06,3.94,1.48,3.94,4.28s-1.36,4.22-3.94,4.28h-2.96v-8.57Zm.82,7.87h1.74c2.46,.01,3.53-1.03,3.53-3.59s-1.07-3.6-3.53-3.59h-1.74v7.17Z'/%3E%3Cpath class='b' d='M74.39,89.6h.82v8.57h-.82v-8.57Z'/%3E%3Cpath class='b' d='M76.87,89.6h.91l4.99,7.25h.02v-7.25h.82v8.57h-.91l-4.99-7.25h-.02v7.25h-.82v-8.57Z'/%3E%3Cpath class='b' d='M92.58,98.16h-.59l-.11-1.56h-.02c-.58,1.22-1.73,1.74-2.96,1.74-2.7,0-4.04-2.12-4.04-4.46s1.34-4.46,4.04-4.46c1.8,0,3.26,.97,3.58,2.84h-.82c-.11-.98-1.13-2.15-2.76-2.15-2.27,0-3.23,1.9-3.23,3.77s.96,3.77,3.23,3.77c1.9,0,3-1.33,2.96-3.14h-2.92v-.7h3.64v4.36Z'/%3E%3C/g%3E%3Cpolygon class='b' points='93.11 86.84 26.11 86.84 26.11 82.65 88.92 82.65 88.92 5.85 12.13 5.85 12.13 56.7 7.93 56.7 7.93 1.66 93.11 1.66 93.11 86.84'/%3E%3Cpolygon class='c' points='24.97 88.15 6.89 88.15 6.89 58.79 13.18 58.79 13.18 81.8 24.97 81.8 24.97 88.15'/%3E%3C/svg%3E");
   width: 110px;
   height: 110px;
+  background-repeat: no-repeat;
 }
 
 .work_box .mainImg.dreammaker{
@@ -554,11 +556,6 @@ footer p{
   padding-left: 20px;
 }
 
-.detail .dm img{
-  width: 100%;
-  display: block; 
-}
-
 .detail .dm img.dm-mockup{
   margin-top: 40px;
 }
@@ -678,4 +675,337 @@ footer p{
 .profile .text .resume a svg{
   width: 14px;
   height: auto;
+}
+
+
+
+/* Media Query */
+@media (max-width: 1024px) {
+
+  /* index */  
+  .main .title .ko {
+    font-size: 26px;
+  }
+
+  .main .title .en {
+    font-size: 80px;
+    line-height: 78px;
+  }
+
+  .category{
+    padding-top: 80px;
+  }
+
+  .category a span {
+    font-size: 30px;
+  }
+
+  .category a svg {
+    width: 35px;
+  }
+
+  /* work */
+  .wrap {
+    padding: 0 30px;
+  }
+
+  /* about */
+  .profile{
+    padding: 0 30px;
+  }
+
+  .profile .pic{
+    min-width: 280px;
+    height: 400px;
+  }
+
+  .profile .text .resume {
+    padding-top: 30px;
+  }
+
+}
+
+@media (max-width: 768px) {
+
+  /* nav */
+  nav .logo img {
+    width: 50px;
+  }
+
+  nav a span{
+    font-size: 18px;
+  }
+
+  /* index */  
+  .main{
+    padding: 0;
+  }
+
+  .main .title .ko {
+    font-size: 24px;
+  }
+
+  .main .title .en {
+    font-size: 64px;
+    line-height: 62px;
+    margin: 28px 0;
+  }
+
+  .category a span {
+    font-size: 28px;
+  }
+
+  .category a svg {
+    width: 32px;
+  }
+
+  /* work */
+  .container{
+    padding: 20px 0;
+  }
+  .container .projects {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .container .projects .thumbnail {
+    width: 100%;
+    height: 180px;
+    margin-bottom: 20px;
+  }
+
+  .container .projects .thumbnail .overlay .textbox p {
+    padding: 30px 0 0 30px;
+    font-size: 16px;
+  }
+
+  .container .projects .thumbnail .overlay .textbox svg {
+    width: 70px;
+    height: 70px;
+    padding: 0 6px 6px 0;
+  }
+
+  /* work - subpages */
+  .back a svg {
+    width: 26px;
+  }
+
+  .work_box .mainImg{
+    margin-top: 30px;
+  }
+
+  .work_box .description {
+    padding: 60px 10px 0px;
+  }
+
+  .detail .img-container.singleImg img {
+    width: 90%;
+  }
+
+  .detail .img-container img.lt_banner{
+    width: 100%;
+  }
+
+  .detail .img-container img.lt_laptop{
+    margin: 50px 0;
+  }
+
+  .detail p.title{
+    font-size: 20px;
+  }
+  
+  .gallery{
+    grid-gap: 16px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .gallery .imgBox img{
+    border-radius: 6px;
+  }
+
+  .gallery .imgBox.imgBox04 {
+    grid-column: 3 / 4;
+    grid-row: 2 / 2;
+  }
+
+  /* about */
+  .profile {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: translate(0,0);
+    flex-direction: column;
+    margin-bottom: 50px;
+    padding: 0;
+  }
+
+  .profile .pic{
+    margin-right: 0;
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .profile .text{
+    margin-top: 20px;
+  }
+
+  .profile .text p{
+    font-size: 15px;
+    line-height: 22px;
+  }
+
+  .profile .text .resume a{
+    margin: 12px 0;
+  }
+
+  .profile .text .resume a span {
+    margin-right: 8px;
+    font-size: 15px;
+  }
+
+  .profile .text .resume a svg{
+    width: 12px;
+  }
+
+  /* footer */
+  footer.about {
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+
+}
+
+@media (max-width: 425px) {
+
+  /* index */
+  .main{
+    padding: 0 20px;
+  }
+
+  .main .title .ko {
+    font-size: 20px;
+  }
+
+  .main .title .en {
+    font-size: 50px;
+    line-height: 54px;
+    margin: 28px 0;
+  }
+
+  .main .title .en span.name{
+    display: block;
+  }
+
+  .category{
+    padding-top: 60px;
+  }
+
+  .category a span {
+    font-size: 26px;
+  }
+
+  .category a svg {
+    width: 29px;
+  }
+
+  /* work */
+  .back{
+    margin-top: 0;
+  }
+
+  .back a svg {
+    width: 22px;
+  }
+
+  .wrap {
+    padding: 0 20px;
+  }
+
+  .container .projects .thumbnail {
+    height: 150px;
+  }
+
+  .container .projects .thumbnail .overlay .textbox p {
+    padding: 24px 0 0 24px;
+    font-size: 15px;
+  }
+
+  .work_box .mainImg.ticketN img{
+    width: 150px;
+  }
+  .work_box .mainImg.ticketN_web img{
+    width: 150px;
+  }
+  .work_box .mainImg.dreammaker img{
+    width: 100px;
+  }
+  .work_box .mainImg.philips img{
+    width: 150px;
+  }
+  .work_box .mainImg.leaders .logo{
+    width: 90px;
+    height: 90px;
+  }
+
+  .work_box .description{
+    padding: 50px 10px 0;
+  }
+
+  .work_box .info p.story{
+    font-size: 15px;
+    line-height: 20px;
+  }
+
+  .work_box .info p.info{
+    font-size: 13px;
+    line-height: 16px;
+    margin: 26px 0 60px;
+  }
+
+  .work_box .name p {
+    font-size: 20px;
+  }
+
+  .detail .img-container.lt{
+    flex-direction: column;
+  }
+
+  .detail .img-container.singleImg img {
+    width: 100%;
+  }
+
+  .detail .img-container img.dm_email,
+  .detail .img-container img.dm_email_code,
+  .detail .img-container img.lt_pages,
+  .detail .img-container img.lt_pages_2{
+    width: 100%;
+    margin: 0 0 20px 0;
+    max-width: 100%;
+  }
+
+  .detail .lt-container{
+    padding: 50px 20px 22px;
+  }
+  
+  .detail .lt-container p{
+    font-size: 15px;
+    line-height: 20px;
+  }
+
+  .gallery{
+    grid-gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .gallery .imgBox.imgBox04 {
+    grid-column: 2 / 4;
+    grid-row: 2 / 2;
+  }
+
+  /* about */
+  .profile .pic{
+    height: 360px;
+  }
+
 }
